tests/contract_testcases/polkadot/tags/contract.sol

        /// @barf
        abstract contract test {}
// ---- Expect: diagnostics ----
// error: 2:14-3:1: tag '@barf' is not valid for contract
